# AIAgents3997-HW10

./: .claudeignore  .env.example  .gitignore  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: Architecture.md  CONFIG.md  COSTS.md  EXPECTED_RESULTS.md  EXTENSIBILITY.md  PRD.md  RESEARCH.md  SECURITY.md  UI.md  literature.md  optimization_comparison.md  scenario_simulations.md  technical_report.md
docs/development/: FINAL_CHECKLIST.md  PROMPT_LOG.md  QUALITY_STANDARD.md
notebooks/: research_summary.ipynb
research/: RESEARCH.md
research/checkpoints/: .gitkeep
research/experiments/: .gitkeep
results/figures/: .gitkeep
results/metrics/: experiment_results.json
scripts/: demo.py  generate_node_docs.py  run_coverage.py  run_linter.py  run_scenarios.py
shared/interfaces/: __init__.py  external.py
shared/tests/: test_token_balancer.py
shared/types/: __init__.py  node.py
shared/utils/: __init__.py  token_balancer.py
tree/M000/: PLAN.md  PRD.md  README.md  TODO.md
tree/M100/: PLAN.md  PRD.md  README.md  TODO.md
tree/M110/: PLAN.md  PRD.md  README.md  TODO.md
tree/M111/: PLAN.md  PRD.md  README.md  TODO.md
tree/M112/: PLAN.md  PRD.md  README.md  TODO.md
tree/M120/: PLAN.md  PRD.md  README.md  TODO.md
tree/M121/: PLAN.md  PRD.md  README.md  TODO.md
tree/M122/: PLAN.md  PRD.md  README.md  TODO.md
tree/M200/: PLAN.md  PRD.md  README.md  TODO.md
tree/M210/: PLAN.md  PRD.md  README.md  TODO.md
tree/M211/: PLAN.md  PRD.md  README.md  TODO.md
tree/M212/: PLAN.md  PRD.md  (+2 more)
(+59 files in other folders)
